1. 创建MagePlayerController 2. 绑定增强输入系统

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -68,3 +68,10 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/ProjectGASRPG.GammerEnemy",NewName="/Script/ProjectGASRPG.MageEnemy")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.GammerCharacterBase",NewName="/Script/ProjectGASRPG.MageCharacterBase")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.GammerCharacterBase",NewName="/Script/ProjectGASRPG.MageCharacterBase")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.GammerCharacter",NewName="/Script/ProjectGASRPG.MageCharacter")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.GammerPlayerController",NewName="/Script/ProjectGASRPG.MagePlayerController")
