鼠标射线追踪+描边

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,6 +12,7 @@ r.Shadow.Virtual.Enable=1
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
+r.CustomDepth=3
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -75,3 +76,4 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.GammerCharacterBase",NewName="/Script/ProjectGASRPG.MageCharacterBase")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.GammerCharacter",NewName="/Script/ProjectGASRPG.MageCharacter")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.GammerPlayerController",NewName="/Script/ProjectGASRPG.MagePlayerController")
+
