--- a/ProjectGASRPG.uproject
+++ b/ProjectGASRPG.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "ProjectGASRPG",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"GameplayAbilities"
+			]
 		}
 	],
 	"Plugins": [
@@ -27,6 +30,10 @@
 			"Name": "UAssetBrowser",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/648d582688654f7db09939af111c45b5"
+		},
+		{
+			"Name": "GameplayAbilities",
+			"Enabled": true
 		}
 	]
 }
