GAS031: Overlay Widget Controller

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/StartLevel.StartLevel
 EditorStartupMap=/Game/Maps/StartLevel.StartLevel
-GlobalDefaultGameMode="/Script/ProjectGASRPG.ProjectGASRPGGameMode"
+GlobalDefaultGameMode=/Game/Blueprints/Game/BP_MagaGameMode.BP_MagaGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
