--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,11 +6,8 @@ AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
++GameplayTagTableList=/Game/Blueprints/GAS/GameplayTags/DT_AttributePrimary.DT_AttributePrimary
 +GameplayTagRedirects=(OldTagName="Attribute.Vital",NewTagName="Attribute.Base")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
-+GameplayTagList=(Tag="Attribute.Base.Health",DevComment="")
-+GameplayTagList=(Tag="Attribute.Base.Mana",DevComment="")
-+GameplayTagList=(Tag="Attribute.Base.MaxHealth",DevComment="")
-+GameplayTagList=(Tag="Attribute.Base.MaxMana",DevComment="")
 
