--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -7,6 +7,7 @@ AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
 +GameplayTagTableList=/Game/Blueprints/GAS/GameplayTags/DT_AttributePrimary.DT_AttributePrimary
++GameplayTagTableList=/Game/Blueprints/GAS/GameplayTags/DT_Message.DT_Message
 +GameplayTagRedirects=(OldTagName="Attribute.Vital",NewTagName="Attribute.Base")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
