GAS067 完善属性类别

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,7 +6,7 @@ AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
-+GameplayTagTableList=/Game/Blueprints/GAS/GameplayTags/DT_AttributePrimary.DT_AttributePrimary
++GameplayTagTableList=/Game/Blueprints/GAS/GameplayTags/Attributes/DT_Attribute.DT_Attribute
 +GameplayTagTableList=/Game/Blueprints/GAS/GameplayTags/DT_Message.DT_Message
 +GameplayTagRedirects=(OldTagName="Attribute.Vital",NewTagName="Attribute.Base")
 NumBitsForContainerSize=6
