--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -77,4 +77,5 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.GammerCharacter",NewName="/Script/ProjectGASRPG.MageCharacter")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.GammerPlayerController",NewName="/Script/ProjectGASRPG.MagePlayerController")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageUserWidget.WidgetControllerSet",NewName="/Script/ProjectGASRPG.MageUserWidget.OnSetWidgetController")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.PhysicalAttack_Max",NewName="/Script/ProjectGASRPG.MMC_MaxPhysicalAttack")
 
