GAS085 C++创建AssetManager，通过C++添加Native GameplayTag

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -54,6 +54,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/ProjectGASRPG")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="ProjectGASRPGGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="ProjectGASRPGCharacter")
+AssetManagerClassName = /Script/ProjectGASRPG.MageAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
