GAS092 BP_AttributeRow 绑定AttributeInfo委托，接收 AttributeInfo（数据资产）信息并更新UI

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -79,4 +79,6 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.GammerPlayerController",NewName="/Script/ProjectGASRPG.MagePlayerController")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageUserWidget.WidgetControllerSet",NewName="/Script/ProjectGASRPG.MageUserWidget.OnSetWidgetController")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.PhysicalAttack_Max",NewName="/Script/ProjectGASRPG.MMC_MaxPhysicalAttack")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageWidgetController.BrodCastInitialValue",NewName="/Script/ProjectGASRPG.MageWidgetController.BrodcastInitialValue")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageWidgetController.BrodcastInitialValue",NewName="/Script/ProjectGASRPG.MageWidgetController.BroadcastInitialValue")
 
