--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -82,3 +82,6 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageWidgetController.BrodCastInitialValue",NewName="/Script/ProjectGASRPG.MageWidgetController.BrodcastInitialValue")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageWidgetController.BrodcastInitialValue",NewName="/Script/ProjectGASRPG.MageWidgetController.BroadcastInitialValue")
 
+[/Script/NavigationSystem.NavigationSystemV1]
+bAllowClientSideNavigation=True
+
