--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -81,6 +81,8 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.PhysicalAttack_Max",NewName="/Script/ProjectGASRPG.MMC_MaxPhysicalAttack")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageWidgetController.BrodCastInitialValue",NewName="/Script/ProjectGASRPG.MageWidgetController.BrodcastInitialValue")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageWidgetController.BrodcastInitialValue",NewName="/Script/ProjectGASRPG.MageWidgetController.BroadcastInitialValue")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpell",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.WeaponMesh",NewName="/Script/ProjectGASRPG.MageCharacterBase.Weapon")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
