GAS128 初始化敌人属性

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -83,6 +83,14 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageWidgetController.BrodcastInitialValue",NewName="/Script/ProjectGASRPG.MageWidgetController.BroadcastInitialValue")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpell",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.WeaponMesh",NewName="/Script/ProjectGASRPG.MageCharacterBase.Weapon")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MagaGameMode",NewName="/Script/ProjectGASRPG.MageGameMode")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassInfo",NewName="/Script/ProjectGASRPG.CharacterClassDataAsset")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.AttributeInfo",NewName="/Script/ProjectGASRPG.AttributeDataAsset")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassDataAsset.CharacterClassDefaultInfo",NewName="/Script/ProjectGASRPG.CharacterClassDataAsset.CharacterClassDefaultInfos")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassDataAsset.VitalAttributes",NewName="/Script/ProjectGASRPG.CharacterClassDataAsset.VitalAttribute")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassDefaultInfo.PrimaryAttributes",NewName="/Script/ProjectGASRPG.CharacterClassDefaultInfo.PrimaryAttribute")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassDefaultInfo.SecondaryAttributes",NewName="/Script/ProjectGASRPG.CharacterClassDefaultInfo.SecondaryAttribute")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemBPLibrary",NewName="/Script/ProjectGASRPG.MageAbilitySystemLibrary")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
