--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -91,6 +91,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassDefaultInfo.PrimaryAttributes",NewName="/Script/ProjectGASRPG.CharacterClassDefaultInfo.PrimaryAttribute")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassDefaultInfo.SecondaryAttributes",NewName="/Script/ProjectGASRPG.CharacterClassDefaultInfo.SecondaryAttribute")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemBPLibrary",NewName="/Script/ProjectGASRPG.MageAbilitySystemLibrary")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.StartupAbilities",NewName="/Script/ProjectGASRPG.MageCharacterBase.CharacterAbilities")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
