--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -92,6 +92,10 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassDefaultInfo.SecondaryAttributes",NewName="/Script/ProjectGASRPG.CharacterClassDefaultInfo.SecondaryAttribute")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemBPLibrary",NewName="/Script/ProjectGASRPG.MageAbilitySystemLibrary")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.StartupAbilities",NewName="/Script/ProjectGASRPG.MageCharacterBase.CharacterAbilities")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.DamageTextComponent",NewName="/Script/ProjectGASRPG.DamageFloatingTextComponent")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.DamageFloatingTextComponent.SetDamageText",NewName="/Script/ProjectGASRPG.DamageFloatingTextComponent.SetDamageFloatingText")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.DamageTextComponentClass",NewName="/Script/ProjectGASRPG.MagePlayerController.DamageFloatingTextComponentClass")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.ShowDamageFloatingText",NewName="/Script/ProjectGASRPG.MagePlayerController.AttachDamageFloatingTextToTarget")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
