GAS144 完善火球技能伤害计算

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -96,6 +96,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.DamageFloatingTextComponent.SetDamageText",NewName="/Script/ProjectGASRPG.DamageFloatingTextComponent.SetDamageFloatingText")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.DamageTextComponentClass",NewName="/Script/ProjectGASRPG.MagePlayerController.DamageFloatingTextComponentClass")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.ShowDamageFloatingText",NewName="/Script/ProjectGASRPG.MagePlayerController.AttachDamageFloatingTextToTarget")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.ExecCalc_Damage",NewName="/Script/ProjectGASRPG.ExecCalc_Fireball_Damage")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
