GAS151 创建AbilitySystemGlobals子类，用于替换默认的GameplayEffectContext结构体。这允许我们访问自定义的GameplayEffectContext

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,3 +3,6 @@ ProjectID=CD35AF0A47D8A6A1FC7F3E8A59B923F9
 ProjectName=Third Person Game Template
 CopyrightNotice=
 
+/** 指定全局类 */
+[/Script/GameplayAbilities.AbilitySystemGlobals]
+AbilitySystemGlobalsClassName="/Script/ProjectGASRPG.MageAbilitySystemGlobals"
