GAS163 创建黑板键FBlackboardKeySelector

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -98,6 +98,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.DamageTextComponentClass",NewName="/Script/ProjectGASRPG.MagePlayerController.DamageFloatingTextComponentClass")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.ShowDamageFloatingText",NewName="/Script/ProjectGASRPG.MagePlayerController.AttachDamageFloatingTextToTarget")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.ExecCalc_Damage",NewName="/Script/ProjectGASRPG.ExecCalc_Fireball_Damage")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.CharacterTags",NewName="/Script/ProjectGASRPG.MageCharacterBase.GameplayTags")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
