GAS185 创建双手攻击型敌人

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -99,6 +99,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.ShowDamageFloatingText",NewName="/Script/ProjectGASRPG.MagePlayerController.AttachDamageFloatingTextToTarget")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.CharacterTags",NewName="/Script/ProjectGASRPG.MageCharacterBase.GameplayTags")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.ExecCalc_Fireball_Damage",NewName="/Script/ProjectGASRPG.ExecCalc_Damage")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.WeaponTipSocketName",NewName="/Script/ProjectGASRPG.MageCharacterBase.WeaponTipSocket")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
