GAS192 远程攻击蒙太奇

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -103,6 +103,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageTypes",NewName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageTypeTag_To_AbilityDamage")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageType_To_AbilityDamage",NewName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageTypeTag_To_AbilityDamage")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_WeaponSocket_Map",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_WeaponSocket")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocation",NewName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocationByMontageTag")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
