GAS2-3 MeleeAttack使用GameplayCue播放受击特效

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -108,6 +108,9 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.WeaponSocketName",NewName="/Script/ProjectGASRPG.MageCharacterBase.WeaponAttachSocket")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_WeaponSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_AttackTriggerSocket")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacter.CharacterAbilities",NewName="/Script/ProjectGASRPG.MageCharacter.PlayerAbilities")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.BloodEffect",NewName="/Script/ProjectGASRPG.MageCharacterBase.HitEffect")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.GetBloodEffect",NewName="/Script/ProjectGASRPG.ICombatInterface.GetHitEffect")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackedEffect",NewName="/Script/ProjectGASRPG.MageCharacterBase.HitEffect")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
