--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -11,4 +11,5 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Montage.Fireball",DevComment="发射火球")
++GameplayTagList=(Tag="GameplayCue.MeleeAttack",DevComment="")
 
