--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -103,14 +103,16 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.WeaponTipSocketName",NewName="/Script/ProjectGASRPG.MageCharacterBase.WeaponTipSocket")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageTypes",NewName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageTypeTag_To_AbilityDamage")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageType_To_AbilityDamage",NewName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageTypeTag_To_AbilityDamage")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_WeaponSocket_Map",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_AttackTriggerSocket")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_WeaponSocket_Map",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_AttackTriggerSocket")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocation",NewName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocationByMontageTag")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.WeaponSocketName",NewName="/Script/ProjectGASRPG.MageCharacterBase.WeaponAttachSocket")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_WeaponSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_AttackTriggerSocket")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_WeaponSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_AttackTriggerSocket")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacter.CharacterAbilities",NewName="/Script/ProjectGASRPG.MageCharacter.PlayerAbilities")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.BloodEffect",NewName="/Script/ProjectGASRPG.MageCharacterBase.HitEffect")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.GetBloodEffect",NewName="/Script/ProjectGASRPG.ICombatInterface.GetHitEffect")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackedEffect",NewName="/Script/ProjectGASRPG.MageCharacterBase.HitEffect")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_AttackTriggerSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_AttackTriggerSocket")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocationByMontageTag",NewName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocationByTag")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
