GAS2-37 创建Abilityinfo DataAsset，ASC创建委托用于广播技能信息到OverlayWidgetController

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -107,12 +107,14 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocation",NewName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocationByMontageTag")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.WeaponSocketName",NewName="/Script/ProjectGASRPG.MageCharacterBase.WeaponAttachSocket")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_WeaponSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_AttackTriggerSocket")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacter.CharacterAbilities",NewName="/Script/ProjectGASRPG.MageCharacter.PlayerAbilities")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.BloodEffect",NewName="/Script/ProjectGASRPG.MageCharacterBase.HitEffect")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.GetBloodEffect",NewName="/Script/ProjectGASRPG.ICombatInterface.GetHitEffect")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackedEffect",NewName="/Script/ProjectGASRPG.MageCharacterBase.HitEffect")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_AttackTriggerSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_AttackTriggerSocket")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocationByMontageTag",NewName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocationByTag")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacter.PlayerAbilities",NewName="/Script/ProjectGASRPG.MageCharacter.CharacterAbilities")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.OnAbilitiesGivenCallback",NewName="/Script/ProjectGASRPG.OverlayWidgetController.OnStartupAbilitiesGivenCallback")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.OnStartupAbilitiesGivenCallback",NewName="/Script/ProjectGASRPG.OverlayWidgetController.OnInitializeStartupAbilities")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
