GAS2-38 每一个被授予的Ability都将AbilityInfo广播到UserWidget，

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -115,6 +115,8 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacter.PlayerAbilities",NewName="/Script/ProjectGASRPG.MageCharacter.CharacterAbilities")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.OnAbilitiesGivenCallback",NewName="/Script/ProjectGASRPG.OverlayWidgetController.OnStartupAbilitiesGivenCallback")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.OnStartupAbilitiesGivenCallback",NewName="/Script/ProjectGASRPG.OverlayWidgetController.OnInitializeStartupAbilities")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.AbilityInfoToDelegate",NewName="/Script/ProjectGASRPG.OverlayWidgetController.AbilityInfoDelegate")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.AbilityInfoToDelegate",NewName="/Script/ProjectGASRPG.OverlayWidgetController.AbilityInfoDelegate")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
