GAS2-39 WBP_SkillIcon 绑定AbilityInfo 委托，根据接收到的AbilityInfo信息设置图片

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -117,6 +117,8 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.OnStartupAbilitiesGivenCallback",NewName="/Script/ProjectGASRPG.OverlayWidgetController.OnInitializeStartupAbilities")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.AbilityInfoToDelegate",NewName="/Script/ProjectGASRPG.OverlayWidgetController.AbilityInfoDelegate")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.AbilityInfoToDelegate",NewName="/Script/ProjectGASRPG.OverlayWidgetController.AbilityInfoDelegate")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityIcon",NewName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityIconImage")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityType",NewName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityTypeImage")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
