GAS2-49 使用委托监听经验值变化

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -119,6 +119,8 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.AbilityInfoToDelegate",NewName="/Script/ProjectGASRPG.OverlayWidgetController.AbilityInfoDelegate")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityIcon",NewName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityIconImage")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityType",NewName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityTypeImage")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.OnEXPChangedCallback",NewName="/Script/ProjectGASRPG.OverlayWidgetController.OnExpChangedCallback")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerState.EXP",NewName="/Script/ProjectGASRPG.MagePlayerState.Exp")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
