GAS2-55 经验条UI绑定经验变化委托，更新经验条

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -121,6 +121,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityType",NewName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityTypeImage")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.OnEXPChangedCallback",NewName="/Script/ProjectGASRPG.OverlayWidgetController.OnExpChangedCallback")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerState.EXP",NewName="/Script/ProjectGASRPG.MagePlayerState.Exp")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.OnExpPercentChangedDelegate",NewName="/Script/ProjectGASRPG.OverlayWidgetController.OnExpChangedDelegate")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
