GAS2-57 升级相关计算

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -122,6 +122,8 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.OnEXPChangedCallback",NewName="/Script/ProjectGASRPG.OverlayWidgetController.OnExpChangedCallback")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerState.EXP",NewName="/Script/ProjectGASRPG.MagePlayerState.Exp")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.OnExpPercentChangedDelegate",NewName="/Script/ProjectGASRPG.OverlayWidgetController.OnExpChangedDelegate")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageLevelUpInfo.AttributePointAward",NewName="/Script/ProjectGASRPG.MageLevelUpInfo.AttributePointReward")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageLevelUpInfo.SkillPointAward",NewName="/Script/ProjectGASRPG.MageLevelUpInfo.SkillPointReward")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
