--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -192,7 +192,7 @@ RemoteExecutionMulticastBindAddress=127.0.0.1
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
 HardwareCursors=()
-SoftwareCursors=((Default, "/Game/Blueprints/UI/UserWidget/Overlay/Cursor/WBP_Cursor.WBP_Cursor_C"))
+SoftwareCursors=()
 ApplicationScale=1.000000
 UIScaleRule=ShortestSide
 CustomScalingRuleClass=None
