GAS2-62 属性菜单UI显示属性点，优化UI逻辑

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -124,6 +124,8 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.OnExpPercentChangedDelegate",NewName="/Script/ProjectGASRPG.OverlayWidgetController.OnExpChangedDelegate")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageLevelUpInfo.AttributePointAward",NewName="/Script/ProjectGASRPG.MageLevelUpInfo.AttributePointReward")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageLevelUpInfo.SkillPointAward",NewName="/Script/ProjectGASRPG.MageLevelUpInfo.SkillPointReward")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerState.OnRep_EXP",NewName="/Script/ProjectGASRPG.MagePlayerState.OnRep_Exp")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerState.OnRep_EXP",NewName="/Script/ProjectGASRPG.MagePlayerState.OnRep_Exp")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
