--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -126,6 +126,8 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageLevelUpInfo.SkillPointAward",NewName="/Script/ProjectGASRPG.MageLevelUpInfo.SkillPointReward")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerState.OnRep_EXP",NewName="/Script/ProjectGASRPG.MagePlayerState.OnRep_Exp")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerState.OnRep_EXP",NewName="/Script/ProjectGASRPG.MagePlayerState.OnRep_Exp")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemComponent.EffectAppliedToSelfCallback",NewName="/Script/ProjectGASRPG.MageAbilitySystemComponent.ClientEffectAppliedToSelfCallback")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.AttributeMenuWidgetController.AttributeInfo",NewName="/Script/ProjectGASRPG.AttributeMenuWidgetController.AttributeDataAsset")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
