GAS2-79 设置技能书图标样式，根据AbilityState变化

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -128,6 +128,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerState.OnRep_EXP",NewName="/Script/ProjectGASRPG.MagePlayerState.OnRep_Exp")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemComponent.EffectAppliedToSelfCallback",NewName="/Script/ProjectGASRPG.MageAbilitySystemComponent.ClientEffectAppliedToSelfCallback")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.AttributeMenuWidgetController.AttributeInfo",NewName="/Script/ProjectGASRPG.AttributeMenuWidgetController.AttributeDataAsset")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityStateTag",NewName="/Script/ProjectGASRPG.MageAbilityInfo.StateTag")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
