--- a/Plugins/Marketplace/PTMTool/PTMTool.uplugin
+++ b/Plugins/Marketplace/PTMTool/PTMTool.uplugin
@@ -13,6 +13,7 @@
 	"EngineVersion": "5.2.0",
 	"CanContainContent": true,
 	"Installed": true,
+	"EnabledByDefault" : true,
 	"Modules": [
 		{
 			"Name": "PTMTool",
