GAS2-90 富文本和技能描述

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -129,7 +129,9 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemComponent.EffectAppliedToSelfCallback",NewName="/Script/ProjectGASRPG.MageAbilitySystemComponent.ClientEffectAppliedToSelfCallback")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.AttributeMenuWidgetController.AttributeInfo",NewName="/Script/ProjectGASRPG.AttributeMenuWidgetController.AttributeDataAsset")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityStateTag",NewName="/Script/ProjectGASRPG.MageAbilityInfo.StateTag")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.OnSkillIconSelectedDelegate",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.CheckButtonEnableOnSkillIconSelected")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageGameplayAbility.AbilityLevel",NewName="/Script/ProjectGASRPG.MageGameplayAbility.StartupAbilityLevel")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageGameplayAbility.DefaultAbilityLevel",NewName="/Script/ProjectGASRPG.MageGameplayAbility.StartupAbilityLevel")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.CheckButtonEnableOnSkillIconSelected",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.OnSkillIconSelectedDelegate")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
