GAS2-91 火球技能描述

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -132,6 +132,8 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageGameplayAbility.AbilityLevel",NewName="/Script/ProjectGASRPG.MageGameplayAbility.StartupAbilityLevel")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageGameplayAbility.DefaultAbilityLevel",NewName="/Script/ProjectGASRPG.MageGameplayAbility.StartupAbilityLevel")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.CheckButtonEnableOnSkillIconSelected",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.OnSkillIconSelectedDelegate")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.NumProjectile",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileNum")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileCount",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileNum")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
