GAS2-96 装备技能等待选择Slots时，装备技能栏播放动画

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -118,7 +118,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.AbilityInfoToDelegate",NewName="/Script/ProjectGASRPG.OverlayWidgetController.AbilityInfoDelegate")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.AbilityInfoToDelegate",NewName="/Script/ProjectGASRPG.OverlayWidgetController.AbilityInfoDelegate")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityIcon",NewName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityIconImage")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityType",NewName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityTypeImage")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityType",NewName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityBackgroundImage")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.OnEXPChangedCallback",NewName="/Script/ProjectGASRPG.OverlayWidgetController.OnExpChangedCallback")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerState.EXP",NewName="/Script/ProjectGASRPG.MagePlayerState.Exp")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.OnExpPercentChangedDelegate",NewName="/Script/ProjectGASRPG.OverlayWidgetController.OnExpChangedDelegate")
@@ -134,6 +134,8 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.CheckButtonEnableOnSkillIconSelected",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.OnSkillIconSelectedDelegate")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.NumProjectile",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileNum")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileCount",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileNum")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityTypeImage",NewName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityBackgroundImage")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.EquipButtonPressed",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.EquipSkillButtonPressed")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
