GAS2-99 当装备技能完成时,取消选中Icon，重置菜单

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -136,6 +136,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileCount",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileNum")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityTypeImage",NewName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityBackgroundImage")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.EquipButtonPressed",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.EquipSkillButtonPressed")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.SkillIconReassignedDelegate",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.SkillIconResetDelegate")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
