--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -137,6 +137,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityTypeImage",NewName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityBackgroundImage")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.EquipButtonPressed",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.EquipSkillButtonPressed")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.SkillIconReassignedDelegate",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.SkillIconResetDelegate")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.Damage",NewName="/Script/ProjectGASRPG.MageDamageGameplayAbility.TypeDamage")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
