GAS2-108 DebuffNiagaraComponent，通过临时GE添加Tag，组件绑定Tag变化委托，来处理激活状态

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -138,6 +138,8 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.EquipButtonPressed",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.EquipSkillButtonPressed")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.SkillIconReassignedDelegate",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.SkillIconResetDelegate")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.Damage",NewName="/Script/ProjectGASRPG.MageDamageGameplayAbility.TypeDamage")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.DebuffNiagaraComponent.DebuffChanged",NewName="/Script/ProjectGASRPG.DebuffNiagaraComponent.DebuffChangedCallback")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.DebuffNiagaraComponent.OnOwnerDeath",NewName="/Script/ProjectGASRPG.DebuffNiagaraComponent.OnOwnerDeathCallback")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
