GAS25-1 火球术分散

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -132,14 +132,17 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageGameplayAbility.AbilityLevel",NewName="/Script/ProjectGASRPG.MageGameplayAbility.StartupAbilityLevel")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageGameplayAbility.DefaultAbilityLevel",NewName="/Script/ProjectGASRPG.MageGameplayAbility.StartupAbilityLevel")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.CheckButtonEnableOnSkillIconSelected",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.OnSkillIconSelectedDelegate")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.NumProjectile",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileNum")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileCount",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileNum")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.NumProjectile",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectilesNum")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileCount",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectilesNum")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityTypeImage",NewName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityBackgroundImage")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.EquipButtonPressed",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.EquipSkillButtonPressed")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.SkillIconReassignedDelegate",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.SkillIconResetDelegate")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.Damage",NewName="/Script/ProjectGASRPG.MageDamageGameplayAbility.TypeDamage")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.DebuffNiagaraComponent.DebuffChanged",NewName="/Script/ProjectGASRPG.DebuffNiagaraComponent.DebuffChangedCallback")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.DebuffNiagaraComponent.OnOwnerDeath",NewName="/Script/ProjectGASRPG.DebuffNiagaraComponent.OnOwnerDeathCallback")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.SpawnProjectiles",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA.SpawnMultiProjectiles")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.TaggedMontage.SocketTag",NewName="/Script/ProjectGASRPG.TaggedMontage.AttackSocketTag")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileNum",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectilesNum")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
