--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -143,6 +143,10 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.SpawnProjectiles",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA.SpawnMultiProjectiles")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.TaggedMontage.SocketTag",NewName="/Script/ProjectGASRPG.TaggedMontage.AttackSocketTag")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileNum",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectilesNum")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MageInputConfig",NewName="/Script/ProjectGASRPG.InputConfigDataAsset")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MageInputDataAsset",NewName="/Script/ProjectGASRPG.InputConfigDataAsset")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MageInputConfigDataAsset",NewName="/Script/ProjectGASRPG.InputConfigDataAsset")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.MageInputConfig",NewName="/Script/ProjectGASRPG.MagePlayerController.InputConfigDataAsset")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
